hphp/hack/test/typecheck/incomplete_method_override.php
<?hh

class Foo {
  public function veryLongNameHere(): void {}
}

class FooChild extends Foo {
  <<__Override>>
  public function vAUTO332
}
